.......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
.......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
..F....... [ZBX-6049] fixed "Undefined index" in Web scenario steps (Oleg)
....I..... [ZBX-5938] removed orphaned trigger from default data set (Alexei)
.......PS. [ZBX-3379] added SourceIP support for SNMP items (dimir)
A......... [ZBXNEXT-1491] fixed alert.get hostids and groupids parameters (Pavels)
A......... [ZBXNEXT-1491] fixed multiple subselects returning hashes instead of arrays (Pavels)
A......... [ZBXNEXT-1491] fixed item.get selectHosts returning double template objects (Pavels)
A......... [ZBXNEXT-1491] fixed itemprototype.get selectItems not returning web items (Pavels)
A......... [ZBXNEXT-1491] fixed template.get selectTemplates and selectHosts not working with count (Pavels)
A......... [ZBXNEXT-1491] fixed script.get subselects not working when not requesting the groupid and host_access properties (Pavels)
..F....... [ZBX-5944] fixed expression calculation displaing (Eduard)
.......P.. [ZBX-5909] fixed proxy compilation when using '--with-sqlite3' (Andris)
..F....... [ZBX-5904] fixed history filter by items (Eduard)
A.F....... [ZBX-5927] fixed selectMappings returning a hash of mappings instead of an array in iconmap.get (Pavels)
A.F....... [ZBX-5927] fixed preservekeys affecting selectSelements and selectLinks in map.get (Pavels)
..F....... [ZBX-5888] fixed incorrect message in trigger expression test (Oleg)
..F....... [ZBX-5895] fixed including map in map (Eduard)
A.F....... [ZBX-5814] fixed an incorrect error message when saving an illegal trigger expression (Sasha)