@@ -100,13 +100,13 @@ elseif ($_REQUEST['config'] == ZBX_AUTH_LDAP) {
 		try {
 			$config['authentication_type'] = $_REQUEST['config'];
 
-			// check login/password
-			$login = API::User()->ldapLogin(array(
+			$ldapValidator = new CLdapAuthValidator($ldap_cnf);
+			$result = $ldapValidator->validate(array(
 				'user' => get_request('user', CWebUser::$data['alias']),
-				'password' => get_request('user_password', ''),
-				'cnf' => $ldap_cnf
+				'password' => get_request('user_password', '')
 			));
-			if (!$login) {
+			if (!$result) {
+				error(_('Login name or password is incorrect.'));
 				throw new Exception();
 			}
 
@@ -128,12 +128,14 @@ elseif ($_REQUEST['config'] == ZBX_AUTH_LDAP) {
 		}
 	}
 	elseif (isset($_REQUEST['test'])) {
-		// check login/password
-		$result = API::User()->ldapLogin(array(
+		$ldapValidator = new CLdapAuthValidator($ldap_cnf);
+		$result = $ldapValidator->validate(array(
 			'user' => get_request('user', CWebUser::$data['alias']),
-			'password' => get_request('user_password', ''),
-			'cnf' => $ldap_cnf
+			'password' => get_request('user_password', '')
 		));
+		if (!$result) {
+			error(_('Login name or password is incorrect.'));
+		}
 
 		show_messages($result, _('LDAP login successful'), _('LDAP login was not successful'));
 	}
