@@ -1,0 +1,53 @@
+<?php
+/*
+** Zabbix
+** Copyright (C) 2000-2012 Zabbix SIA
+**
+** This program is free software; you can redistribute it and/or modify
+** it under the terms of the GNU General Public License as published by
+** the Free Software Foundation; either version 2 of the License, or
+** (at your option) any later version.
+**
+** This program is distributed in the hope that it will be useful,
+** but WITHOUT ANY WARRANTY; without even the implied warranty of
+** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+** GNU General Public License for more details.
+**
+** You should have received a copy of the GNU General Public License
+** along with this program; if not, write to the Free Software
+** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+**/
+
+/**
+ * A class for validating LDAP credentials.
+ */
+class CLdapAuthValidator extends CValidator {
+
+	protected $options = array(
+		'host' => null,
+		'port' => null,
+		'base_dn' => null,
+		'bind_dn' => null,
+		'bind_password' => null,
+		'search_attribute' => null
+	);
+
+	/**
+	 * Checks if the given user name and password are valid.
+	 *
+	 * The $value array must have the following attributes:
+	 * - user       - user name
+	 * - password   - password
+	 *
+	 * @param array $value
+	 *
+	 * @return bool
+	 */
+	public function validate($value) {
+		$ldap = new CLdap($this->options);
+		$ldap->connect();
+
+		return $ldap->checkPass($value['user'], $value['password']);
+	}
+
+}
